UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/Service_Order__c.object-meta.xml
<CustomObject>
    <description>This is the DPI Service Order(s) that are related to the associated order</description>
    <label>Service Order</label>
    <nameField>
        <label>Service Order #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>