UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>