UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/act_comp_date__c.field-meta.xml
<CustomField>
    <fullName>act_comp_date__c</fullName>
    <label>act comp date</label>
    <type>Date</type>
</CustomField>