UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>