UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Bill_With_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_With_Number__c</fullName>
    <label>Bill With Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>