UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <description>This is the DPI Service Order Billing Number.</description>
    <inlineHelpText>This is the DPI Service Order Billing Number.</inlineHelpText>
    <label>Billing #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>