UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>