UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>