UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <description>M5 Service Order Circuit ID</description>
    <label>Circuit ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>