UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Circuit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Quantity__c</fullName>
    <label>Circuit Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>