UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/COA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Received_Date__c</fullName>
    <label>COA Received Date</label>
    <type>Date</type>
</CustomField>