UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/CONCATINATE__c.field-meta.xml
<CustomField>
    <fullName>CONCATINATE__c</fullName>
    <externalId>true</externalId>
    <label>CONCATINATE</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>