UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Contact_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Telephone_Number__c</fullName>
    <label>Contact Telephone Number</label>
    <type>Phone</type>
</CustomField>