UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Current_Stage_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Code_Description__c</fullName>
    <label>Current Stage Code Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>