UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>