UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>