UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>DPI Service Order Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>