UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Down_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Received_Date__c</fullName>
    <label>Down Payment Received Date</label>
    <type>Date</type>
</CustomField>