UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Downpayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Downpayment_Amount__c</fullName>
    <label>Down Payment Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>