UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/DPI_Env__c.field-meta.xml
<CustomField>
    <fullName>DPI_Env__c</fullName>
    <label>DPI Environment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>