UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Eff_Comp_Date__c.field-meta.xml
<CustomField>
    <fullName>Eff_Comp_Date__c</fullName>
    <label>Eff. Comp Date</label>
    <type>Date</type>
</CustomField>