UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/EVC_Indicator__c.field-meta.xml
<CustomField>
    <fullName>EVC_Indicator__c</fullName>
    <label>EVC Indicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>