UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/EVC_Spec_Code__c.field-meta.xml
<CustomField>
    <fullName>EVC_Spec_Code__c</fullName>
    <label>EVC Spec Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>