UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/FSI_REQ_s__c.field-meta.xml
<CustomField>
    <fullName>FSI_REQ_s__c</fullName>
    <label>FSI REQ(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>