UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Infinium_Requisition_No__c.field-meta.xml
<CustomField>
    <fullName>Infinium_Requisition_No__c</fullName>
    <description>Infinium Requisition N</description>
    <label>Requisition Number</label>
    <type>TextArea</type>
</CustomField>