UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Initiatior_Number__c.field-meta.xml
<CustomField>
    <fullName>Initiatior_Number__c</fullName>
    <label>Initiatior Number</label>
    <type>Phone</type>
</CustomField>