UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Installation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completion_Date__c</fullName>
    <label>Installation Completion Date</label>
    <type>Date</type>
</CustomField>