UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Is_Created_By_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_By_Velocity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Synced With M6?</label>
    <type>Checkbox</type>
</CustomField>