UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Item_Spec_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Spec_Id__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1001</fullName>
                <label>Retail Circuit Service</label>
            </value>
            <value>
                <fullName>1002</fullName>
                <label>Broadband Services - Retail</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>ATM/FR Connection</label>
            </value>
            <value>
                <fullName>1005</fullName>
                <label>PVC Connection</label>
            </value>
            <value>
                <fullName>1007</fullName>
                <label>Circuit Services - Wholesale</label>
            </value>
            <value>
                <fullName>1009</fullName>
                <label>Broadband Services - Whsl Resale</label>
            </value>
            <value>
                <fullName>1010</fullName>
                <label>ATM/FR Connection.</label>
            </value>
            <value>
                <fullName>1011</fullName>
                <label>Ethernet Connection</label>
            </value>
            <value>
                <fullName>1012</fullName>
                <label>PVC Connection.</label>
            </value>
            <value>
                <fullName>1013</fullName>
                <label>EVC Connections - Retail.</label>
            </value>
            <value>
                <fullName>1040</fullName>
                <label>Circuit Services - Whsl Resale</label>
            </value>
            <value>
                <fullName>1041</fullName>
                <label>Wholesale Resale Circuit Service</label>
            </value>
            <value>
                <fullName>1042</fullName>
                <label>Wholesale UNE Loop/Circuit Service</label>
            </value>
            <value>
                <fullName>1060</fullName>
                <label>Trunk Group Data - Retail</label>
            </value>
            <value>
                <fullName>1061</fullName>
                <label>Data Trunk</label>
            </value>
            <value>
                <fullName>1062</fullName>
                <label>Trunk Group Data - Whsl Resale</label>
            </value>
            <value>
                <fullName>1063</fullName>
                <label>Trunk Group ISDN - Retail</label>
            </value>
            <value>
                <fullName>1064</fullName>
                <label>ISDN Trunk</label>
            </value>
            <value>
                <fullName>1065</fullName>
                <label>Data Trunk.</label>
            </value>
            <value>
                <fullName>1066</fullName>
                <label>Trunk Group ISDN - Whsl Resale</label>
            </value>
            <value>
                <fullName>1067</fullName>
                <label>ISDN Trunk.</label>
            </value>
            <value>
                <fullName>1068</fullName>
                <label>Trunk Group Voice/DCS - Retail</label>
            </value>
            <value>
                <fullName>1069</fullName>
                <label>Trunk Group Voice/DCS - Whsl Resale</label>
            </value>
            <value>
                <fullName>1070</fullName>
                <label>Voice/DCS Trunk</label>
            </value>
            <value>
                <fullName>1071</fullName>
                <label>Voice/DCS Trunk.</label>
            </value>
            <value>
                <fullName>1080</fullName>
                <label>EVC Connections - Retail</label>
            </value>
            <value>
                <fullName>1101</fullName>
                <label>EVPL</label>
            </value>
            <value>
                <fullName>1102</fullName>
                <label>EIA</label>
            </value>
            <value>
                <fullName>1103</fullName>
                <label>ELAN</label>
            </value>
            <value>
                <fullName>1111</fullName>
                <label>UNI Connections - Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>