UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Jeopardy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Jeopardy_Reason__c</fullName>
    <label>Jeopardy Reason</label>
    <length>25</length>
    <type>Text</type>
</CustomField>