UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/LASTUPDATEDTYM__c.field-meta.xml
<CustomField>
    <fullName>LASTUPDATEDTYM__c</fullName>
    <label>LASTUPDATEDTYM</label>
    <type>DateTime</type>
</CustomField>