UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Leasing_BTN__c.field-meta.xml
<CustomField>
    <fullName>Leasing_BTN__c</fullName>
    <label>Leasing BTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>