UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/M6_dd_task_date__c.field-meta.xml
<CustomField>
    <fullName>M6_dd_task_date__c</fullName>
    <label>M6 Due Date</label>
    <type>DateTime</type>
</CustomField>