UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/M6_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>M6_Order_Notes__c</fullName>
    <label>M6 Order Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>