UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Memo_ID__c.field-meta.xml
<CustomField>
    <fullName>Memo_ID__c</fullName>
    <label>Memo ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>