UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/ORDER_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ORDER_STATUS__c</fullName>
    <externalId>true</externalId>
    <label>ORDER_STATUS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>