UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Order_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Date__c</fullName>
    <label>Order Status Date</label>
    <type>Date</type>
</CustomField>