UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/ORDER_STATUS_DES__c.field-meta.xml
<CustomField>
    <fullName>ORDER_STATUS_DES__c</fullName>
    <label>ORDER_STATUS_DESCRIPTION</label>
    <length>9</length>
    <type>Text</type>
</CustomField>