UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Order_T_C_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_T_C_Code__c</fullName>
    <label>Order Type Classification Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>