UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Order_T_C_Des__c.field-meta.xml
<CustomField>
    <fullName>Order_T_C_Des__c</fullName>
    <label>Order Type Classification Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>