UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>