UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Order_Version__c.field-meta.xml
<CustomField>
    <fullName>Order_Version__c</fullName>
    <label>Order Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>