UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Partner_Company__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company__c</fullName>
    <formula>User__r.Partner_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Company</label>
    <type>Text</type>
</CustomField>