UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>