UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/PRILOC__c.field-meta.xml
<CustomField>
    <fullName>PRILOC__c</fullName>
    <label>PRILOC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>