UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/PRILOC_ACTL_NNI_CLLI__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_ACTL_NNI_CLLI__c</fullName>
    <label>PRILOC - ACTL/NNI CLLI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>