UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Priloc_Address__c.field-meta.xml
<CustomField>
    <fullName>Priloc_Address__c</fullName>
    <label>Primary Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>