UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/PRILOC_LCON_TN__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_LCON_TN__c</fullName>
    <label>PRILOC - LCON TN</label>
    <type>Phone</type>
</CustomField>