UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Infinium Purchase_Order_Number</description>
    <label>Purchase Order Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>