UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Purchase_Order_Number_PON__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number_PON__c</fullName>
    <label>Purchase Order Number(PON)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>