UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Related_Purchase_order_Number_RPON__c.field-meta.xml
<CustomField>
    <fullName>Related_Purchase_order_Number_RPON__c</fullName>
    <label>Related Purchase order Number(RPON)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>