UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Schedule_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Due_Date__c</fullName>
    <description>This is the date that the work is to be ready by... (TBD)</description>
    <label>Schedule Due Date</label>
    <type>Date</type>
</CustomField>