UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/SECLOC__c.field-meta.xml
<CustomField>
    <fullName>SECLOC__c</fullName>
    <label>SECLOC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>