UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Secloc_Address__c.field-meta.xml
<CustomField>
    <fullName>Secloc_Address__c</fullName>
    <label>Secondary Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>