UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/SECLOC_LCON_TN__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_LCON_TN__c</fullName>
    <label>SECLOC - LCON TN</label>
    <type>Phone</type>
</CustomField>