UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Service_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Control_Number__c</fullName>
    <label>Service Control Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>