UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Service_Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Stage__c</fullName>
    <label>Service Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1 - Order Entry</fullName>
                <label>Order Entry</label>
            </value>
            <value>
                <fullName>Stage 2 - Engineering Review</fullName>
                <label>Engineering Review</label>
            </value>
            <value>
                <fullName>Stage 3 - Construction / Build</fullName>
                <label>Construction / Build</label>
            </value>
            <value>
                <fullName>Stage 4 - Design / Provisioning</fullName>
                <label>Design / Provisioning</label>
            </value>
            <value>
                <fullName>Stage 5 - Physical / Virtual Turn up</fullName>
                <label>Physical / Virtual Turn up</label>
            </value>
            <value>
                <fullName>Stage 6 - Customer Acceptance / Billing</fullName>
                <label>Customer Acceptance / Billing</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>ESB Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>