UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/SO_Created__c.field-meta.xml
<CustomField>
    <fullName>SO_Created__c</fullName>
    <label>SO Created</label>
    <type>Date</type>
</CustomField>