UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/so_posted_date__c.field-meta.xml
<CustomField>
    <fullName>so_posted_date__c</fullName>
    <label>so posted date</label>
    <type>Date</type>
</CustomField>