UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Sold_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Employee__c</fullName>
    <label>Sold By Employee#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>