UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/SUPPLEMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SUPPLEMENT_TYPE__c</fullName>
    <label>SUPPLEMENT TYPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>