UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Switched_Ethernet_Indicator_SEI__c.field-meta.xml
<CustomField>
    <fullName>Switched_Ethernet_Indicator_SEI__c</fullName>
    <label>Switched Ethernet Indicator(SEI)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>