UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/TAMCO_DPI_BTN__c.field-meta.xml
<CustomField>
    <fullName>TAMCO_DPI_BTN__c</fullName>
    <label>TAMCO DPI BTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>