UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telephone Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Telephone_Number__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Telephone_Number__c</referenceTo>
    <relationshipLabel>Service Order</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>