UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASR</fullName>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>EWO</fullName>
            </value>
            <value>
                <fullName>ISR</fullName>
            </value>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>