UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/UNI_Spec_Code__c.field-meta.xml
<CustomField>
    <fullName>UNI_Spec_Code__c</fullName>
    <label>UNI Spec Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>