UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/UNINC__c.field-meta.xml
<CustomField>
    <fullName>UNINC__c</fullName>
    <label>UNI NC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>