UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Update_Code__c.field-meta.xml
<CustomField>
    <fullName>Update_Code__c</fullName>
    <label>Update Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>