UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Orderss</relationshipName>
    <type>Lookup</type>
</CustomField>