UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Vendor_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_Status__c</fullName>
    <label>Vendor Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>