UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Vendor_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status_Code__c</fullName>
    <label>Vendor Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>