UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/fields/Working_Number__c.field-meta.xml
<CustomField>
    <fullName>Working_Number__c</fullName>
    <description>This is the DPI Service Order Working Number.</description>
    <inlineHelpText>This is the DPI Service Order Working Number.</inlineHelpText>
    <label>Working #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>