UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/Carrier_Service1.recordType-meta.xml
<RecordType>
    <fullName>Carrier_Service1</fullName>
    <active>true</active>
    <description>Carrier Service for ASR</description>
    <label>Carrier Service1</label>
</RecordType>