UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/DPI_Service_Order.recordType-meta.xml
<RecordType>
    <fullName>DPI_Service_Order</fullName>
    <active>true</active>
    <description>This is for DPI Service Orders.</description>
    <label>DPI Service Order</label>
</RecordType>