UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/FSI_Service_Order.recordType-meta.xml
<RecordType>
    <fullName>FSI_Service_Order</fullName>
    <active>true</active>
    <label>FSI Service Order</label>
</RecordType>