UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/Infinium_REQ.recordType-meta.xml
<RecordType>
    <fullName>Infinium_REQ</fullName>
    <active>true</active>
    <description>Used by the CPE COE Team</description>
    <label>Infinium REQ</label>
</RecordType>