UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/M6_Service_Order.recordType-meta.xml
<RecordType>
    <fullName>M6_Service_Order</fullName>
    <active>true</active>
    <description>Use this is for M6 Service Orders</description>
    <label>M6 Service Order</label>
</RecordType>