UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/Out_of_Franchise.recordType-meta.xml
<RecordType>
    <fullName>Out_of_Franchise</fullName>
    <active>true</active>
    <description>Use for Out of Franchise Cases</description>
    <label>Out of Franchise</label>
</RecordType>