UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/TigerPaw.recordType-meta.xml
<RecordType>
    <fullName>TigerPaw</fullName>
    <active>true</active>
    <label>TigerPaw</label>
</RecordType>