UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/recordTypes/Vendor_Order.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Order</fullName>
    <active>true</active>
    <label>Vendor Order</label>
</RecordType>