UCF-APR2.4/ftr main/force-app/main/default/objects/Service_Order__c/validationRules/Billing_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Number_Required</fullName>
    <active>false</active>
    <description>if the &quot;Order&quot; record type is &quot;Move, Disconnect, or Upgrade&quot; Circuit ID is required</description>
    <errorConditionFormula>AND(
OR(
Order__r.RecordType.Name = &quot;Move Order&quot;,
Order__r.RecordType.Name = &quot;Disconnect Order&quot;,
Order__r.RecordType.Name = &quot;Upgrade Order&quot;
),
RecordType.Name = &quot;DPI Service Order&quot;,
Billing_Number__c = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Billing_Number__c</errorDisplayField>
    <errorMessage>For Move, Disconnect, or Upgrade orders, the Billing Number is required is required</errorMessage>
</ValidationRule>